--- a/Resonators.html
+++ b/Resonators.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+    <link rel="icon" href="img/headicon.png">
     <title>Resonators | Wuthering Waves Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
