--- a/Blackshores.html
+++ b/Blackshores.html
@@ -20,7 +20,7 @@
         <div class="pato">
             <h1>Blackshores</h1>
             <br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim veritatis voluptas mollitia sint obcaecati voluptates repellendus. Possimus corrupti facilis, asperiores voluptas magni quos commodi illo vero ratione, quis itaque iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, distinctio quas nulla maiores impedit ratione exercitationem dolorem, corrupti quam culpa aut officia explicabo reprehenderit voluptatum alias tempora quidem blanditiis? Nulla. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, possimus delectus? Et maiores distinctio accusantium tempora sint modi iste reiciendis voluptatem fuga, commodi tempore blanditiis! Eius fugit quos ab dolorum!</p>
+            <p>Blackshores is situated on a remote archipelago in Huanglong, built upon a vast land mass of Tacetite ore that remains sealed away from the outside world by thick digital fog. As a result, this enigmatic location boasts the most advanced technology in existence, hidden from prying eyes. Furthermore, it serves as the sanctuary for the Guardians of Huanglong, who protect the secrets of this high-tech haven. The combination of isolation and innovation creates an atmosphere of both mystery and power, making Blackshores a pivotal stronghold in the realm.</p>
         </div>
         <br><br><br><br><br><br><br><br>
         <div class="subregion">
