--- a/Desorock Highlands.html
+++ b/Desorock Highlands.html
@@ -20,7 +20,7 @@
         <div class="pato">
             <h1>Desorock Highlands</h1>
             <br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim veritatis voluptas mollitia sint obcaecati voluptates repellendus. Possimus corrupti facilis, asperiores voluptas magni quos commodi illo vero ratione, quis itaque iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, distinctio quas nulla maiores impedit ratione exercitationem dolorem, corrupti quam culpa aut officia explicabo reprehenderit voluptatum alias tempora quidem blanditiis? Nulla. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, possimus delectus? Et maiores distinctio accusantium tempora sint modi iste reiciendis voluptatem fuga, commodi tempore blanditiis! Eius fugit quos ab dolorum!</p>
+            <p>The Desorock Highlands, located in the northern reaches of Huanglong, are a stark and formidable landscape shaped by relentless natural forces. This rugged region features towering cliffs and steep ravines, where the weather shifts rapidly, often resulting in harsh conditions. The presence of Tacet Discords, fearsome monsters that roam these highlands, adds to the trepidation felt by any who dare to explore. As storms roll in and shadows loom, adventurers must navigate treacherous paths and overcome unexpected challenges, seeking hidden treasures while facing the perils of this tumultuous environment. Here, survival depends on both cunning and courage, as the highlands guard their secrets fiercely.</p>
             <br><br><br><br>
         </div>
         <br><br><br><br><br><br><br><br>
