--- a/Mt. Firmament.html
+++ b/Mt. Firmament.html
@@ -20,7 +20,7 @@
         <div class="pato">
             <h1>Mt. Firmament</h1>
             <br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim veritatis voluptas mollitia sint obcaecati voluptates repellendus. Possimus corrupti facilis, asperiores voluptas magni quos commodi illo vero ratione, quis itaque iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, distinctio quas nulla maiores impedit ratione exercitationem dolorem, corrupti quam culpa aut officia explicabo reprehenderit voluptatum alias tempora quidem blanditiis? Nulla. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, possimus delectus? Et maiores distinctio accusantium tempora sint modi iste reiciendis voluptatem fuga, commodi tempore blanditiis! Eius fugit quos ab dolorum!</p>
+            <p>A secluded island lies in the southeastern ocean of Huanglong, shrouded in mist that obscures its ties to the secular world. Mt. Firmament, therefore, serves as the ancestral homeland of the Jinzhou inhabitants, steeped in legend as the place where Sentinel Jué descended to guide them. Moreover, time behaves differently on Mt. Firmament, influenced by the enigmatic Temporal Mandate of Sentinel Jué, causing time to ebb and flow unpredictably. Consequently, the first people of Jinzhou emerged from this mystical mountain, forever connecting their fate to its mysterious essence.</p>
         </div>
         <br><br><br><br><br><br><br><br>
         <div class="subregion">
