--- a/jinzhou.html
+++ b/jinzhou.html
@@ -20,7 +20,7 @@
         <div class="pato">
             <h1>Jinzhou</h1>
             <br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim veritatis voluptas mollitia sint obcaecati voluptates repellendus. Possimus corrupti facilis, asperiores voluptas magni quos commodi illo vero ratione, quis itaque iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, distinctio quas nulla maiores impedit ratione exercitationem dolorem, corrupti quam culpa aut officia explicabo reprehenderit voluptatum alias tempora quidem blanditiis? Nulla. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, possimus delectus? Et maiores distinctio accusantium tempora sint modi iste reiciendis voluptatem fuga, commodi tempore blanditiis! Eius fugit quos ab dolorum!</p>
+            <p>Known as the throat of Huanglong, Jinzhou is nestled within a vast lake, embraced by water on three sides and cradled by mountains on the fourth. This fortified city experiences a humid climate characterized by four distinct seasons and serves as a crucial stronghold against the looming threat of Tacet Discords. Founded by the Rover during their last awakening, Jinzhou is the most recent city established in Huanglong and the only one in Outer Huanglong. Governed by Magistrate Jinhsi and guided by Sentinel Jué, it plays a vital role in regional defense. Although it is neither the largest nor the most populated of the seven major cities, its strategic importance remains unmatched.</p>
             <br><br><br><br>
         </div>
         <br><br><br><br><br><br><br><br>
