--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1>The Waves of Destiny</h1>
                 <h1>Awaits you</h1>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, officia iusto. Provident quam doloremque quo ut eos assumenda excepturi, perferendis in laborum perspiciatis iure quas enim, a tenetur omnis ipsa!</p>
+                <p>Traverse vibrant landscapes, encounter enigmatic characters, and solve intricate puzzles that echo across time. Your choices will resonate through the ages, creating ripples that define not just your adventure, but the very world around you. Are you ready to ride the waves of destiny?</p>
             </div>
             <div class="scan">
                 <br>
